--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -205,4 +205,7 @@
   <data name="WWBP_empathy_lexicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Dictionaries\WWBP-empathy_lexicon.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="eMFD" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Dictionaries\eMFD.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
