--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -211,4 +211,7 @@
   <data name="Weigand_et_al___2018____Abuse_Lexicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Dictionaries\Weigand et al. (2018) - Abuse Lexicon.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="Orr___Gilead__review____Mental_Physical_Verb_Norms" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Dictionaries\Orr &amp; Gilead (review) - Mental-Physical Verb Norms.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
